js/js.translator/testData/incremental/invalidation/internalMethodFakeOverrideInFriendMain/main/test.kt
fun test(): Int = Leaf().value()
